--- a/frontend/src/components/Game.module.css
+++ b/frontend/src/components/Game.module.css
@@ -5,18 +5,22 @@
 }
 
 .back-button {
+    align-self: flex-start;
     background-color: #4e4e4e;
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    padding: 5px;
+    /* width: 30px;
+    height: 30px; */
+    border-radius: 20px;
+    padding: 5px 10px;
+    margin-top: 1rem;
+    color:white;
+    text-decoration: none;
+    font-family: "Lexend", serif;
+    font-weight: 400;
 }
 
 .container {
-    width: fit-content;
+    width: 630px;
+    padding-bottom: 25px;
     min-height: 100vh;
     height: fit-content;
     display: flex;
@@ -37,7 +41,7 @@
 
 .stats-container {
     width: 630px;
-    margin-top: 20px;
+    margin-top: 1rem;
     display: flex;
     justify-content: space-between;
     color: rgb(179, 179, 179);
