--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,3 +18,23 @@
     justify-content: center;
     align-items: center;
 }
+
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 400px;
+    border-radius: 20px 20px 0 0;
+    background-color: rgb(56, 56, 56);
+    text-align: center;
+    padding: 10px 0;
+    font-family: "Montserrat", serif;
+    font-weight: 500;
+}
+
+footer a:link, footer a:visited {
+    color: white;
+}
+
+footer a:link:hover, footer a:visited:hover {
+    color: rgb(197, 197, 197);
+}
