--- a/frontend/src/components/Game.module.css
+++ b/frontend/src/components/Game.module.css
@@ -7,8 +7,6 @@
 .back-button {
     align-self: flex-start;
     background-color: #4e4e4e;
-    /* width: 30px;
-    height: 30px; */
     border-radius: 20px;
     padding: 5px 10px;
     margin-top: 1rem;
@@ -147,6 +145,9 @@
     color: white;
 }
 
+.loader-container { 
+    height: 635px;
+}
 .loader {
     width: 48px;
     height: 48px;
