--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,10 +17,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 
 footer {
-    position: fixed;
+    position: absolute;
     bottom: 0;
     width: 400px;
     border-radius: 20px 20px 0 0;
